--- a/.env
+++ b/.env
@@ -25,6 +25,20 @@ APP_SECRET=
 DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
+MYSQL_DATABASE=app
+MYSQL_USER=app
+MYSQL_PASSWORD=app
+MYSQL_ROOT_PASSWORD=root
+MYSQL_PORT=3306
+
+DB_HOST=127.0.0.1
+DB_PORT=${MYSQL_PORT}
+DB_NAME=${MYSQL_DATABASE}
+DB_USER=${MYSQL_USER}
+DB_PASSWORD=${MYSQL_PASSWORD}
+DB_SERVER_VERSION=8.4
+
+
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -32,7 +46,7 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?serverVersion=${DB_SERVER_VERSION}"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -47,8 +61,3 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 
-MYSQL_DATABASE=app
-MYSQL_USER=app
-MYSQL_PASSWORD=app
-MYSQL_ROOT_PASSWORD=root
-MYSQL_PORT=3306
